src/objects/CustomObject10__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>采购日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>工具性质</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>标配工具</fullName>
                </value>
                <value>
                    <fullName>公共配置工具</fullName>
                </value>
                <value>
                    <fullName>自备工具</fullName>
                </value>
                <value>
                    <fullName>自购工具</fullName>
                </value>
                <value>
                    <fullName>标配耗材</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>品牌</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>工具</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field6__c</columns>
        <columns>Field5__c</columns>
        <columns>Field9__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>GJ-{0000}</displayFormat>
        <label>工具编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工具</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>